Version 2 - Add a bit of styling - Fix canvas - Change key pressing from the client to be able to go diagonally - Fix uneven movement on keydown with fixed speed - Fix diagonal acceleration with sqrt - Fix going in opposite direction

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -1,9 +1,14 @@
 body {
   background-color: aquamarine;
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 .gameCanvas {
+  display: block;
   background-color: blueviolet;
-  width: 30vw;
-  height: 30vh;
+  margin: auto;
+  border: 5px solid black;
 }
